# mcp_simple_database_manager

./: .env.example  .gitignore  DEVELOPMENT.md  FIX_SUMMARY.md  LICENSE  Makefile  PROJECT_STATUS.md  README.md  detect_ollama.py  pyproject.toml  run_server.py
examples/: README.md  client_example.py  llamaindex_example.py  simple_client.py  utilities.py
src/mcp_simple_db_access/: __init__.py  __main__.py  server.py
tests/: conftest.py  test_database.py  test_examples.py  test_integration.py  test_ollama_client.py  test_tools.py
